--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,8 +25,9 @@ img{
   display: flex;
 }
 .leftDiv{
+  text-align: center;
   width: 30%;
-  background-color: #ddd;
+  background-color: grey;
   border: 3px solid #fff000;
   box-shadow: 3px 3px 3px #000000;
 
@@ -35,7 +36,7 @@ img{
 .rightDiv {
   margin: 1%;
   padding: 1%;
-  background-color: #FFFACD;
+  background-color: grey;
   border: 1px solid #000fff;
 }
 @media screen and (min-width:320px) and (max-width:480px){
@@ -55,7 +56,7 @@ img{
     flex-wrap: wrap;
   }
   .card,.leftDiv,.rightDiv{
-    width: 90%;
+    width: 45%;
     margin-left:auto;
     margin-right: auto;
   }
